--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
