--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "react-responsive-carousel": "^3.2.21",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
@@ -24,8 +23,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
