--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.3.0",
