--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
+    "ra-data-json-server": "^3.19.0",
     "react": "^17.0.2",
+    "react-admin": "^3.19.0",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
