--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
     "ra-data-json-server": "^3.19.0",
+    "ra-data-simple-rest": "^3.19.0",
     "react": "^17.0.2",
     "react-admin": "^3.19.0",
     "react-bootstrap": "^2.0.0-rc.0",
